--- a/src/content/docs/fr/guides/markdown-content.mdx
+++ b/src/content/docs/fr/guides/markdown-content.mdx
@@ -677,140 +677,93 @@ export default defineConfig({
 
 Astro supporte nativement [Shiki](https://shiki.matsu.io/) et [Prism](https://prismjs.com/). Cela vous permet de profiter de la coloration syntaxique pour :
 
-- tous les blocs de code (texte entouré par \`\`\`) utilisés dans un fichier Markdown (`.md`) et le [composant natif `<Markdown />`](#composant-markdown).
-- le contenu dans le [composant natif `<Code />`](/fr/reference/api-reference/#code-) (géré par Shiki) ou le [composant `<Prism />`](/fr/reference/api-reference/#prism-) (géré par Prism).
+- tous les blocs de code (\`\`\`) utilisés dans un fichier Markdown ou MDX.
+- le contenu dans le [composant natif `<Code />`](/fr/reference/api-reference/#code-) (géré par Shiki).
+- le contenu dans le [composant `<Prism />`](/fr/reference/api-reference/#prism-) (géré par Prism).
 
 Shiki est activé par défaut, préconfiguré avec le thème `github-dark`. Le code compilé sera limité à des `styles` intégrés au HTML sans aucune classe CSS supplémentaire, ni feuilles de styles, ou JS sur le client.
 
-Si vous choisissez d'utiliser Prism, nous appliquerons les classes CSS de Prism à la place. Notez que **vous avez besoin de vos propres feuilles de styles CSS** pour que la coloration syntaxique apparaisse ! Consultez la [section de configuration de Prism](#configuration-de-prism) pour plus de détails.
-
-#### Choisissez un colorateur syntaxique
-
-Shiki est notre colorateur syntaxique par défaut. Si vous souhaitez utiliser `'prism'` ou désactiver la coloration syntaxique entièrement, vous pouvez utiliser l'objet de configuration `markdown` :
-
-```js
-// astro.config.mjs
-export default {
-  markdown: {
-    // Peut aussi être 'shiki' (par défaut), 'prism' ou false pour désactiver la coloration
-    syntaxHighlight: 'prism',
-  }
-};
-```
-
 #### Configuration de Shiki
 
-Lorsque vous utilisez Shiki, vous pouvez configurer toutes les options via l'objet de configuration `shikiConfig` comme suit :
+Shiki est notre colorateur syntaxique par défaut. Vous pouvez configurer toutes les options via l'objet `shikiConfig` comme ci-après :
 
-```js
-// astro.config.mjs
-export default {
+```js title="astro.config.mjs"
+import { defineConfig } from 'astro/config';
+
+export default defineConfig({
   markdown: {
     shikiConfig: {
-      // Choisir parmi les thèmes de Shiki (ou ajoutez le votre)
+      // Choisissez parmi les thèmes intégrés de Shiki (ou ajoutez les vôtres)
       // https://github.com/shikijs/shiki/blob/main/docs/themes.md
       theme: 'dracula',
-      // Ajouter un langage customisé
-      // Note : Shiki a de nombreux langages pré-intégrées, y compris .astro !
+      // Ajouter des langues personnalisées
+      // Note : Shiki intègre d'innombrables langages, y compris le .astro !
       // https://github.com/shikijs/shiki/blob/main/docs/languages.md
       langs: [],
-      // Activer le retour à la ligne pour éviter le défilement horizontal
+      // Activer le retour à la ligne automatique pour éviter le défilement horizontal
       wrap: true,
     },
   },
-};
+});
 ```
 
-Nous suggérons jeter un oeil [dans leur documentation de thème](https://github.com/shikijs/shiki/blob/main/docs/themes.md#loading-theme) pour explorer le chargement de thème personnalisé, les modes « light » et « dark », ou le style via des variables CSS.
+#### Ajouter votre propre thème
+
+Au lieu d'utiliser l'un des thèmes prédéfinis de Shiki, vous pouvez importer un thème personnalisé à partir d'un fichier local.
+
+```js title="astro.config.mjs"
+import { defineConfig } from 'astro/config';
+import customTheme from './my-shiki-theme.json';
+
+export default defineConfig({
+  markdown: {
+    shikiConfig: { theme: customTheme },
+  },
+});
+```
+
+Nous vous conseillons également de lire [la documentation de Shiki sur les thèmes personnalisés](https://github.com/shikijs/shiki/blob/main/docs/themes.md#loading-theme) pour en savoir plus sur les thèmes, les modes clair et sombre, ou le style via les variables CSS.
+
+#### Modifier le mode par défaut de coloration syntaxique
+
+Si vous souhaitez utiliser `'prism'` par défaut, ou désactiver la coloration syntaxique entièrement, vous pouvez utiliser l'objet de configuration `markdown.syntaxHighlighting` :
+
+```js title="astro.config.mjs" ins={6}
+import { defineConfig } from 'astro/config';
+
+export default defineConfig({
+  markdown: {
+    // Peut aussi être 'shiki' (par défaut), 'prism' ou false pour désactiver la coloration
+    syntaxHighlight: 'prism',
+  },
+});
+```
 
 #### Configuration de Prism
 
-Lorsque vous utilisez Prism, vous aurez besoin d'ajouter une feuille de styles à votre projet pour la coloration syntaxique. Si vous êtes nouveau et préférez utiliser Prism plutôt que Shiki, nous vous suggérons :
+Si vous choisissez d'utiliser Prism, Astro appliquera les classes CSS de Prism à la place. Notez que **vous devez apporter votre propre feuille de style CSS** pour que la coloration syntaxique apparaisse !
 
-1. [Définir `syntaxHighlight: 'prism'`](#choisissez-un-colorateur-syntaxique) depuis votre configuration `@astrojs/markdown-remark`.
-2. Choisir une feuille de styles préfabriquée depuis les [Thèmes Prism](https://github.com/PrismJS/prism-themes).
-3. Ajouter cette feuille de styles dans [le répertoire `public/` de votre projet](/fr/core-concepts/project-structure/#public).
-4. Charger cette feuille de styles dans le [`<head>` de votre page](/fr/core-concepts/astro-pages/#pages-astro) via une balise `<link>`.
+1. Choisissez une feuille de style prédéfinie parmi les [Thèmes Prism](https://github.com/PrismJS/prism-themes) disponibles.
+2. Ajouter cette feuille de styles dans [le répertoire `public/` de votre projet](/fr/core-concepts/project-structure/#public).
+3. Chargez-la dans la balise `<head>` de votre page dans un [composant de feuille de style](/fr/core-concepts/layouts/) via une balise `<link>`. (Voir [utilisation basique de Prism](https://prismjs.com/#basic-usage).)
 
 Vous pouvez aussi visiter la [liste des langages supportés par Prism](https://prismjs.com/#supported-languages) pour les options et leur usage.
 
+## Récupérer du Markdown distant
 
-## Composant Markdown
+Astro a été principalement conçu pour les fichiers Markdown locaux qui peuvent être enregistrés dans le répertoire de votre projet. Toutefois, dans certains cas, il peut être nécessaire de récupérer le code Markdown à partir d'une source distante. Par exemple, vous pouvez avoir besoin de récupérer et de rendre du Markdown à partir d'une API distante lorsque vous compilez votre site web (ou lorsqu'un utilisateur fait une demande sur votre site web, en utilisant le [SSR](/fr/guides/server-side-rendering/)).
 
-> **Note :** Le composant `<Markdown />` n'est pas compatible avec le mode SSR et risque d'être supprimé avant la version 1.0. Il devrait être évité si possible. Pour utiliser Markdown dans vos Templates de composants, utilisez un fichier `.md` et ensuite [utilisez `import` vers votre Markdown](#importer-du-contenu-markdown) dans votre Template comme composant.
+**Astro ne comprend pas de support intégré pour le Markdown à distance !** Pour récupérer un fichier Markdown distant et le rendre au format HTML, vous devrez installer et configurer votre propre parser Markdown à partir de npm. Celui-ci **n'héritera pas** des paramètres intégrés Markdown et MDX d'Astro que vous avez configurés. Assurez-vous de bien comprendre ces limitations avant de l'intégrer à votre projet.
 
-Vous pouvez importer le [composant Markdown d'Astro](/fr/reference/api-reference/#markdown-) dans votre script de composant et l'utiliser avec la balise `<Markdown> </Markdown>`.
-
-````astro
+```astro title="src/pages/remote-example.astro"
 ---
-import { Markdown } from 'astro/components';
-import Layout from '../layouts/Layout.astro';
-
-const expressions = 'Lorem ipsum';
+// Exemple : Récupérer du Markdown à partir d'une API distante 
+// et le rendre en HTML au moment de l'exécution.
+// En utilisant "marked" (https://github.com/markedjs/marked)
+import { marked } from 'marked';
+const response = await fetch('https://raw.githubusercontent.com/wiki/adam-p/markdown-here/Markdown-Cheatsheet.md');
+const markdown = await response.text();
+const content = marked.parse(markdown);
 ---
-<Layout>
-  <Markdown>
-    # Hello world!
-
-    **Tout** supporté dans un fichier `.md` est aussi supporté ici !
-
-    Il n'y a aucun coût de temps de démarrage.
-
-    En plus, Astro supporte :
-    - Les {expressions} Astro
-    - L'indentation automatique normalisée
-    - L'échappement automatique des expressions dans les blocs de code
-
-    ```js
-      // Ce contenu n'est pas transformé !
-      const object = { someOtherValue };
-    ```
-
-    - Support de composants riches comme tous les fichiers `.astro` !
-    - Support de Markdown récursif (les enfants des composants sont également traités comme Markdown)
-  </Markdown>
-</Layout>
-````
-
-### Markdown distant
-
-> **Note :** Le composant `<Markdown />` n'est pas compatible avec le mode SSR et risque d'être supprimé avant la version 1.0. Il devrait être évité si possible. Pour utiliser Markdown dans vos Templates de composants, utilisez un fichier `.md` et ensuite utilisez `import` vers votre Markdown dans votre Template comme composant. Lisez cet [discussion RFC (de l'anglais "requests for comments")](https://github.com/withastro/rfcs/discussions/179) pour plus d'infomations
-
-Si vous avez du Markdown venant d'une source distante, vous pouvez l'envoyer directement au composant Markdown via l'attribut `content`.
-
-```astro
----
-import { Markdown } from 'astro/components';
-
-const content = await fetch('https://raw.githubusercontent.com/withastro/docs/main/README.md').then(res => res.text());
----
-<Layout>
-  <Markdown content={content} />
-</Layout>
+<article set:html={content} />
 ```
-
-### Markdown imbriqué
-
-> **Note :** Le composant `<Markdown />` n'est pas compatible avec le mode SSR et risque d'être supprimé avant la version 1.0. Il devrait être évité si possible. Pour utiliser Markdown dans vos Templates de composants, utilisez un fichier `.md` et ensuite utilisez `import` vers votre Markdown dans votre Template comme composant. Lisez cet [discussion RFC (de l'anglais "requests for comments")](https://github.com/withastro/rfcs/discussions/179) pour plus d'infomations
-
-Les composants `<Markdown />` peuvent être imbriqués.
-
-```astro
----
-import { Markdown } from 'astro/components';
-
-const content = await fetch('https://raw.githubusercontent.com/withastro/docs/main/README.md').then(res => res.text());
----
-
-<Layout>
-  <Markdown>
-    ## Exemple Markdown
-
-    Ici, nous avons du __Markdown__. Nous pouvons aussi afficher du contenu distant.
-
-    <Markdown content={content} />
-  </Markdown>
-</Layout>
-```
-
-⚠️ L'utilisation du composant `Markdown` pour afficher du Markdown distant peut vous rendre vulnérable à une attaque [cross-site scripting (XSS)](https://fr.wikipedia.org/wiki/Cross-site_scripting). Si vous affichez du contenu que vous ne contrôlez pas, assurez-vous de le sécuriser (_sanitize_) **avant** de l'afficher.
