Feat: updating the translation of the 'styling.mdx' guide page

--- a/src/content/docs/fr/guides/markdown-content.mdx
+++ b/src/content/docs/fr/guides/markdown-content.mdx
@@ -152,7 +152,7 @@ const {frontmatter} = Astro.props;
 ```
 
 
-Vous pouvez également [donner du style à votre Markdown](/fr/guides/styling/#markdown-styling) dans votre composant de mise en page.
+Vous pouvez également [donner du style à votre Markdown](/fr/guides/styling/#stylisation-markdown) dans votre composant de mise en page.
 
 📚 En savoir plus à propos des [Layouts Markdown](/fr/core-concepts/layouts/#mises-en-page-markdownmdx).
 
@@ -450,7 +450,7 @@ Vous pouvez personnaliser la façon dont remark parse votre Markdown dans `astro
 
 ### Plugins Markdown
 
-Astro prend en charge l'ajout de plugins tiers [remark](https://github.com/remarkjs/remark) et [rehype](https://github.com/rehypejs/rehype) pour Markdown et MDX. Ces plugins vous permettent d'ajouter de nouvelles fonctionnalités à votre Markdown, comme [la génération automatique d'une table des matières](https://github.com/remarkjs/remark-toc), [appliquer des étiquettes d'émoji accessibles](https://github.com/florianeckerstorfer/remark-a11y-emoji) et [styliser votre markdown](/fr/guides/styling/#markdown-styling).
+Astro prend en charge l'ajout de plugins tiers [remark](https://github.com/remarkjs/remark) et [rehype](https://github.com/rehypejs/rehype) pour Markdown et MDX. Ces plugins vous permettent d'ajouter de nouvelles fonctionnalités à votre Markdown, comme [la génération automatique d'une table des matières](https://github.com/remarkjs/remark-toc), [appliquer des étiquettes d'émoji accessibles](https://github.com/florianeckerstorfer/remark-a11y-emoji) et [styliser votre markdown](/fr/guides/styling/#stylisation-markdown).
 
 Nous vous encourageons à consulter [awesome-remark](https://github.com/remarkjs/awesome-remark) et [awesome-rehype](https://github.com/rehypejs/awesome-rehype) pour les plugins populaires ! Lisez le README de chaque plugin pour connaitre les instructions d'installation spécifiques.
 
