--- a/src/content/docs/en/reference/image-service-reference.mdx
+++ b/src/content/docs/en/reference/image-service-reference.mdx
@@ -20,7 +20,7 @@ Astro provides two types of image services: Local and External.
 
 Services definitions take the shape of an exported default object with various required methods ("hooks"). 
 
-Local services provide a `transform()` method to perform transformations on your image and  `getURL()` and `parseURL()` methods to use an endpoint for dev mode and SSR. External services provide a `getURL()` that points to the `src` of the output `<img>` tag. Both types of services can provide `getHTMLAttributes()` to determine the attributes of the output `<img>`.
+Local services provide a `transform()` method to perform transformations on your image and  `getURL()` and `parseURL()` methods to use an endpoint for dev mode and SSR. External services provide a `getURL()` that points to the `src` of the output `<img>` tag. Both types of services can provide `getHTMLAttributes()` to determine the other attributes of the output `<img>`.
 
 ### External Services
 
