--- a/src/content/docs/en/reference/image-service-reference.mdx
+++ b/src/content/docs/en/reference/image-service-reference.mdx
@@ -18,9 +18,13 @@ Astro provides two types of image services: Local and External.
 
 ## Building using the Image Services API
 
-Services definitions take the shape of an exported default object with various required methods ("hooks"). 
+Service definitions take the shape of an exported default object with various required methods ("hooks"). 
 
-Local services provide a `transform()` method to perform transformations on your image and  `getURL()` and `parseURL()` methods to use an endpoint for dev mode and SSR. External services provide a `getURL()` that points to the `src` of the output `<img>` tag. Both types of services can provide `getHTMLAttributes()` to determine the other attributes of the output `<img>`.
+External services provide a `getURL()` that points to the `src` of the output `<img>` tag.
+
+Local services provide a `transform()` method to perform transformations on your image, and  `getURL()` and `parseURL()` methods to use an endpoint for dev mode and SSR. 
+
+Both types of services can provide `getHTMLAttributes()` to determine the other attributes of the output `<img>`.
 
 ### External Services
 
@@ -113,6 +117,30 @@ At build time for static sites and pre-rendered routes, both `<Image/>` and `get
 In dev mode and SSR mode, Astro doesn't know ahead of time which images need to be optimized. Astro uses a GET endpoint (by default, (`/_image`) to process the images at runtime. `<Image/>` and `getImage()` pass their options to `getURL()`, which will return the endpoint URL. Then, the endpoint calls `parseURL()` and passes the resulting properties to `transform()`.
 
 #### getConfiguredImageService
+
+If you implement your own endpoint as an Astro endpoint, you can use `getConfiguredImageService` to call your service's `parseURL` and `transform` methods.
+
+```ts title="src/api/my_custom_endpoint_that_transforms_images.ts"
+import type { APIRoute } from "astro";
+import { getConfiguredImageService } from 'astro:assets';
+
+export const get: APIRoute = async ({ request }) => {
+  const imageService = await getConfiguredImageService();
+
+  const imageTransform = imageService.parseURL(new URL(request.url));
+  // ... fetch the image from imageTransform.src and store it in inputBuffer
+  const { data, format } = await imageService.transform(inputBuffer, imageTransform);
+  return new Response(data, {
+			status: 200,
+			headers: {
+				'Content-Type': mime.getType(format) || ''
+      }
+  );
+}
+```
+
+[See the built-in endpoint](https://github.com/withastro/astro/blob/main/packages/astro/src/assets/image-endpoint.ts) for a full example.
+  
 
 ## Hooks
 
