remove MDX mention

--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -9,7 +9,7 @@ i18nReady: false
 The new assets experience currently features:
 
 - A new built-in `<Image />` component
-- Relative images with automatic optimization in Markdown and MDX files
+- Relative images with automatic optimization in Markdown
 - Integration with content collections
 - Improved error messages and types
 
@@ -71,7 +71,7 @@ import rocket from '../assets/images/rocket.svg'
 
 ### Update your Markdown files
 
-Relative images can now be referenced in Markdown and MDX files. These will automatically be optimized and hashed by Astro's build process.
+Relative images can now be referenced in Markdown files. These will automatically be optimized and hashed by Astro's build process.
 
 This allows you to move your images from the `public/` directory to the new, reserved `src/assets/` directory or move them near your Markdown files. (See the URL path of these built images in the example below.)
 
