--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -209,7 +209,7 @@ You can optionally state the [image file type](https://developer.mozilla.org/en-
 ##### quality
 
 `quality` is an optional property that can either be:
-- a preset (`low`, `medium`, `high`, `max`) that is automatically normalized between formats.
+- a preset (`low`, `mid`, `high`, `max`) that is automatically normalized between formats.
 - a number from `0` to `100` (interpreted differently between formats).
 
 ##### alt (required)
