--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -163,7 +163,7 @@ Enabling asset support allows you to access the `astro:assets` module. This modu
 
 The `<Image />` component generates an `<img>` tag.
 
-This component can transform an image's dimensions, file type, and quality to produce an optimized image that avoids Content Layout Shift **(CLS)**.
+This component can transform an image's dimensions, file type, and quality to produce an optimized image. The resulting `<img>` tag will include the correct `width` and `height` attributes to avoid Content Layout Shift **(CLS)**.
 
 :::tip[What is Content Layout Shift?]
 CLS is a score that reflects how much content shifted on your page during loading. The ideal number for CLS is as close to zero as possible, which the `Image` component enforces by automatically selecting the correct `width` and `height` for local images.
