--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -251,7 +251,7 @@ import myImage from "../assets/my_image.png";
 
 ### `getImage()` (`astro:assets`)
 
-This function is intended for generating images destined to be used somewhere else than directly in HTML, for example in CSS or in an [API Route](/en/core-concepts/endpoints/#server-endpoints-api-routes).
+This function is intended for generating images destined to be used somewhere else than directly in HTML, for example in an [API Route](/en/core-concepts/endpoints/#server-endpoints-api-routes). It also allows you to create your own custom `<Image />` component.
 
 `getImage()` takes an options object with the same properties as the Image component (except `alt`).
 
