optimized asset support

--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -4,7 +4,7 @@ description: Learn how to enable experimental asset support in Astro.
 i18nReady: false
 ---
 
-**Built-in Asset Support** is enabled in Astro behind an experimental flag. This built-in feature will eventually replace the optional `@astrojs/image` integration.
+**Built-in optimized asset support** is enabled in Astro behind an experimental flag. This built-in feature will eventually replace the optional `@astrojs/image` integration.
 
 The new assets experience currently features:
 
