update framework name

--- a/src/pages/en/guides/baas.mdx
+++ b/src/pages/en/guides/baas.mdx
@@ -24,7 +24,7 @@ BaaS can be seen as a way to abstract away the complexities of building and mana
 
 ## Why would I use a Backend as a Service
 
-Using a Backend as a Service (BaaS) in a JavaScript framework like Astro.js can bring several benefits, such as:
+Using a Backend as a Service (BaaS) in a JavaScript framework like Astro can bring several benefits, such as:
 
 Reduced Development Time: BaaS provides pre-built backend components, such as databases, authentication, and storage, which can save time compared to building and configuring these components from scratch.
 
@@ -36,4 +36,4 @@ Increased Focus on Application Development: By outsourcing backend management to
 
 Simplified Maintenance: BaaS providers typically handle maintenance, security, and updates for the backend components, freeing up developers to focus on adding new features and improving the application.
 
-In summary, using BaaS in a JavaScript framework like Astro.js can help you develop and launch applications faster, more cost-effectively, and with less maintenance overhead.
+In summary, using BaaS in a JavaScript framework like Astro can help you develop and launch applications faster, more cost-effectively, and with less maintenance overhead.
