three starter recipes

--- a/src/content/docs/en/recipes.mdx
+++ b/src/content/docs/en/recipes.mdx
@@ -16,3 +16,6 @@ See guided examples of adding features to your Astro project.
 ## Community Resources
 
 Add your own here!
+- [Add authentication with Prisma and Planetscale](https://www.thomasledoux.be/blog/authentication-astro-prisma-planetscale)
+- [Use a dynamic filename when importing images](https://vaihe.com/blog/astro/astro-dynamic-image-prop/)
+- [Add animated page transitions with Swup](https://navillus.dev/blog/astro-plus-swup)
