--- a/src/content/docs/en/reference/cli-reference.mdx
+++ b/src/content/docs/en/reference/cli-reference.mdx
@@ -239,6 +239,14 @@ Runs diagnostics (such as type-checking within `.astro` files) against your proj
 
 This command is intended to be used in CI workflows.
 
+<h3>Flags</h3>
+
+Use these flags to customize the behavior of the command.
+
+#### `--watch`
+
+The command will watch for any changes to `.astro` files, and will report any errors.
+
 :::note
 This command only checks types within `.astro` files.  
 :::
