fixed broken links

--- a/src/content/docs/es/reference/cli-reference.mdx
+++ b/src/content/docs/es/reference/cli-reference.mdx
@@ -84,9 +84,9 @@ Global Flags
 
 También puedes usar scripts en el `package.json` para versiones más cortas de estos comandos. Usar un script te permite usar los mismos comandos que podrías estar familiarizado de otros proyectos, como `npm run build`.
 
-El siguiente script para los comandos más comunes de `astro` (`astro dev`, `astro build` y `astro preview`) se agrega automáticamente cuando creas un proyecto usando [el asistente `create astro`](/es/install/auto/#1-ejecuta-el-asistente-de-configuracion).
+El siguiente script para los comandos más comunes de `astro` (`astro dev`, `astro build` y `astro preview`) se agrega automáticamente cuando creas un proyecto usando [el asistente `create astro`](/es/install/auto/#1-ejecuta-el-asistente-de-configuración).
 
-Cunado sigues las instrucciones para [instalar Astro manualmente](/es/install/manual/#2-inicia-astro), se te indica que agregues estos scripts tú mismo. También puedes agregar más scripts a esta lista manualmente para cualquier comando que uses con frecuencia.
+Cunado sigues las instrucciones para [instalar Astro manualmente](/es/install/manual/#2-instala-astro), se te indica que agregues estos scripts tú mismo. También puedes agregar más scripts a esta lista manualmente para cualquier comando que uses con frecuencia.
 
 ```json title="package.json"
 {
