cumulative layout shift

--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -163,9 +163,9 @@ Enabling asset support allows you to access the `astro:assets` module. This modu
 
 The `<Image />` component generates an `<img>` tag.
 
-This component can transform an image's dimensions, file type, and quality to produce an optimized image. The resulting `<img>` tag will include the correct `width` and `height` attributes to avoid Content Layout Shift **(CLS)**.
+This component can transform an image's dimensions, file type, and quality to produce an optimized image. The resulting `<img>` tag will include the correct `width` and `height` attributes to avoid Cumulative Layout Shift **(CLS)**.
 
-:::tip[What is Content Layout Shift?]
+:::tip[What is Cumulative Layout Shift?]
 CLS is a score that reflects how much content shifted on your page during loading. The ideal number for CLS is as close to zero as possible, which the `Image` component enforces by automatically selecting the correct `width` and `height` for local images.
 :::
 
@@ -275,3 +275,5 @@ It returns an object with the following properties:
   attributes: {...} // Additional HTML attributes needed to render the image (width, height, style, etc..)
 }
 ```
+
+## Using Sharp
