fix code example in service ref

--- a/src/content/docs/en/reference/image-service-reference.mdx
+++ b/src/content/docs/en/reference/image-service-reference.mdx
@@ -204,8 +204,11 @@ Configure the image service to use in `astro.config.mjs`. The config takes the f
 import { defineConfig } from "astro/config";
 
 export default defineConfig({
+  experimental: {
+    assets: true,
+  },
   image: {
-    service: "your-entrypoint", // 'astro/image/services/squoosh' | 'astro/image/services/sharp' | string
+    service: "your-entrypoint", // 'astro/assets/services/squoosh' | 'astro/assets/services/sharp' | string
   },
 });
 ```
