--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -3,6 +3,7 @@ title: Assets (Experimental)
 description: Learn how to enable experimental asset support in Astro.
 i18nReady: false
 ---
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 **Built-in optimized asset support** is enabled in Astro behind an experimental flag. This built-in feature will eventually replace the optional `@astrojs/image` integration.
 
@@ -274,4 +275,43 @@ It returns an object with the following properties:
   src: "https//..." // Path to the generated image,
   attributes: {...} // Additional HTML attributes needed to render the image (width, height, style, etc..)
 }
+```
+
+## Using sharp
+
+By default, Astro uses [Squoosh](https://github.com/GoogleChromeLabs/squoosh) to transform your images. This supports all JavaScript environments.
+
+If you're deploying to a Node environment, you may want to use [sharp](https://github.com/lovell/sharp), which offers faster performance but requires Node. To use sharp, first install it:
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  npm install sharp
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpm install sharp
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  yarn add sharp
+  ```
+  </Fragment>
+</PackageManagerTabs>
+
+Then, enable Astro's sharp image service in your config:
+
+```js title="astro.config.mjs"
+import { defineConfig } from "astro/config";
+
+export default defineConfig({
+	experimental: {
+		assets: true,
+	},
+	image: {
+		service: "astro/assets/services/sharp",
+	},
+});
 ```
