--- a/src/content/docs/en/recipes.mdx
+++ b/src/content/docs/en/recipes.mdx
@@ -16,3 +16,10 @@ See guided examples of adding features to your Astro project.
 ## Community Resources
 
 Add your own here!
+
+- [Add authentication with Prisma and Planetscale](https://www.thomasledoux.be/blog/authentication-astro-prisma-planetscale)
+- [Use a dynamic filename when importing images](https://vaihe.com/blog/astro/astro-dynamic-image-prop/)
+- [Add animated page transitions with Swup](https://navillus.dev/blog/astro-plus-swup)
+- [Use UnoCSS in Astro](https://www.elian.codes/blog/23-02-11-implementing-unocss-in-astro/)
+- [Build a table of contents from Astro's Markdown headings](https://kld.dev/building-table-of-contents/)
+- [Add searching to your site with Pagefind](https://blog.otterlord.dev/post/astro-search/)
