--- a/src/content/docs/pt-br/guides/data-fetching.mdx
+++ b/src/content/docs/pt-br/guides/data-fetching.mdx
@@ -99,7 +99,7 @@ const clima = json.data;
 :::note
 Lembre-se, todos os dados em componentes Astro são buscados quando o componente é renderizado.
 
-Seu site Astro após o deploy irá buscar os dados **uma vez, em tempo de build**. No desenvolvimento, você verá a busca de dados ao recarregar componentes. Se você precisa buscar dados múltiplas vezes no lado do cliente, utilize um [componente de framework](/pt-br/core-concepts/framework-components/) ou um [script no lado do cliente](/pt-br/core-concepts/astro-components/#scripts-no-lado-do-cliente) em um componente Astro.
+Seu site Astro após o deploy irá buscar os dados **uma vez, em tempo de build**. No desenvolvimento, você verá a busca de dados ao recarregar componentes. Se você precisa buscar dados múltiplas vezes no lado do cliente, utilize um [componente de framework](/pt-br/core-concepts/framework-components/) ou um [script no lado do cliente](/pt-br/guides/client-side-scripts/) em um componente Astro.
 :::
 
 ## Busque de um CMS Headless
